tests/ui/invalid_frompy_derive.stderr
error: cannot derive FromPyObject for empty structs and variants
 --> tests/ui/invalid_frompy_derive.rs:4:11
  |
4 | struct Foo();
  |           ^^

error: cannot derive FromPyObject for empty structs and variants
 --> tests/ui/invalid_frompy_derive.rs:8:13
  |
8 | struct Foo2 {}
  |             ^^

error: cannot derive FromPyObject for empty enum
  --> tests/ui/invalid_frompy_derive.rs:12:6
   |
12 | enum EmptyEnum {}
   |      ^^^^^^^^^

error: cannot derive FromPyObject for empty structs and variants
  --> tests/ui/invalid_frompy_derive.rs:17:15
   |
17 |     EmptyTuple(),
   |               ^^

error: cannot derive FromPyObject for empty structs and variants
  --> tests/ui/invalid_frompy_derive.rs:24:17
   |
24 |     EmptyStruct {},
   |                 ^^

error: cannot derive FromPyObject for empty structs and variants
  --> tests/ui/invalid_frompy_derive.rs:31:27
   |
31 | struct EmptyTransparentTup();
   |                           ^^

error: cannot derive FromPyObject for empty structs and variants
  --> tests/ui/invalid_frompy_derive.rs:36:31
   |
36 | struct EmptyTransparentStruct {}
   |                               ^^

error: cannot derive FromPyObject for empty structs and variants
  --> tests/ui/invalid_frompy_derive.rs:42:15
   |
42 |     EmptyTuple(),
   |               ^^

error: cannot derive FromPyObject for empty structs and variants
  --> tests/ui/invalid_frompy_derive.rs:50:17
   |
50 |     EmptyStruct {},
   |                 ^^

error: transparent structs and variants can only have 1 field
  --> tests/ui/invalid_frompy_derive.rs:57:35
   |
57 | struct TransparentTupTooManyFields(String, String);
   |                                   ^^^^^^^^^^^^^^^^

error: transparent structs and variants can only have 1 field
  --> tests/ui/invalid_frompy_derive.rs:62:39
   |
62 |   struct TransparentStructTooManyFields {
   |  _______________________________________^
63 | |
64 | |     foo: String,
65 | |     bar: String,
66 | | }
   | |_^

error: transparent structs and variants can only have 1 field
  --> tests/ui/invalid_frompy_derive.rs:71:15
   |
71 |     EmptyTuple(String, String),
   |               ^^^^^^^^^^^^^^^^

error: transparent structs and variants can only have 1 field
  --> tests/ui/invalid_frompy_derive.rs:79:17
   |
79 |       EmptyStruct {
   |  _________________^
80 | |
81 | |         foo: String,
82 | |         bar: String,
83 | |     },
   | |_____^

error: expected one of: `attribute`, `item`, `from_py_with`, `into_py_with`, `default`
  --> tests/ui/invalid_frompy_derive.rs:89:12
   |
89 |     #[pyo3(attr)]
   |            ^^^^

error: expected string literal
  --> tests/ui/invalid_frompy_derive.rs:96:22
   |
96 |     #[pyo3(attribute(1))]
   |                      ^

error: expected at most one argument: `attribute` or `attribute("name")`
   --> tests/ui/invalid_frompy_derive.rs:103:25
    |
103 |     #[pyo3(attribute("a", "b"))]
    |                         ^

error: attribute name cannot be empty
   --> tests/ui/invalid_frompy_derive.rs:110:22
    |
110 |     #[pyo3(attribute(""))]
    |                      ^^

error: unexpected end of input, expected string literal
   --> tests/ui/invalid_frompy_derive.rs:117:22
    |
117 |     #[pyo3(attribute())]
    |                      ^

error: expected at most one argument: `item` or `item(key)`
   --> tests/ui/invalid_frompy_derive.rs:124:20
    |
124 |     #[pyo3(item("a", "b"))]
    |                    ^

error: unexpected end of input, expected literal
   --> tests/ui/invalid_frompy_derive.rs:131:17
    |
131 |     #[pyo3(item())]
    |                 ^

error: only one of `attribute` or `item` can be provided
   --> tests/ui/invalid_frompy_derive.rs:138:18
    |
138 |     #[pyo3(item, attribute)]
    |                  ^^^^^^^^^

error: expected one of: `transparent`, `from_item_all`, `annotation`, `crate`, `rename_all`
   --> tests/ui/invalid_frompy_derive.rs:144:8
    |
144 | #[pyo3(unknown = "should not work")]
    |        ^^^^^^^

error: `annotation` is unsupported for structs
   --> tests/ui/invalid_frompy_derive.rs:151:21
    |
151 | #[pyo3(annotation = "should not work")]
    |                     ^^^^^^^^^^^^^^^^^

error: expected string literal
   --> tests/ui/invalid_frompy_derive.rs:159:25
    |
159 |     #[pyo3(annotation = 1)]
    |                         ^

error: FromPyObject can be derived with at most one lifetime parameter
   --> tests/ui/invalid_frompy_derive.rs:165:22
    |
165 | enum TooManyLifetimes<'a, 'b> {
    |                      ^

error: #[derive(FromPyObject)] is not supported for unions
   --> tests/ui/invalid_frompy_derive.rs:172:1
    |
172 | union Union {
    | ^^^^^

error: cannot derive FromPyObject for empty structs and variants
   --> tests/ui/invalid_frompy_derive.rs:177:10
    |
177 | #[derive(FromPyObject)]
    |          ^^^^^^^^^^^^
    |
    = note: this error originates in the derive macro `FromPyObject` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `=`
   --> tests/ui/invalid_frompy_derive.rs:185:24
    |
185 |     #[pyo3(from_py_with)]
    |                        ^

error: `getter` is not permitted on tuple struct elements.
   --> tests/ui/invalid_frompy_derive.rs:197:27
    |
197 | struct InvalidTupleGetter(#[pyo3(item("foo"))] String);
    |                           ^

error: `transparent` structs may not have a `getter` for the inner field
   --> tests/ui/invalid_frompy_derive.rs:204:5
    |
204 |     field: String,
    |     ^^^^^

error: `transparent` structs may not have a `getter` for the inner field
   --> tests/ui/invalid_frompy_derive.rs:216:5
    |
216 |     field: String,
    |     ^^^^^

error: `from_item_all` may only be specified once
   --> tests/ui/invalid_frompy_derive.rs:221:23
    |
221 | #[pyo3(from_item_all, from_item_all)]
    |                       ^^^^^^^^^^^^^

error: Useless `item` - the struct is already annotated with `from_item_all`
   --> tests/ui/invalid_frompy_derive.rs:228:8
    |
228 | #[pyo3(from_item_all)]
    |        ^^^^^^^^^^^^^

error: The struct is already annotated with `from_item_all`, `attribute` is not allowed
   --> tests/ui/invalid_frompy_derive.rs:236:8
    |
236 | #[pyo3(from_item_all)]
    |        ^^^^^^^^^^^^^

error: The struct is already annotated with `from_item_all`, `attribute` is not allowed
   --> tests/ui/invalid_frompy_derive.rs:244:8
    |
244 | #[pyo3(from_item_all)]
    |        ^^^^^^^^^^^^^

error: cannot derive FromPyObject for structs and variants with only default values
   --> tests/ui/invalid_frompy_derive.rs:252:36
    |
252 |   struct StructWithOnlyDefaultValues {
    |  ____________________________________^
253 | |
254 | |     #[pyo3(default)]
255 | |     field: String,
256 | | }
    | |_^

error: cannot derive FromPyObject for structs and variants with only default values
   --> tests/ui/invalid_frompy_derive.rs:260:9
    |
260 |       Foo {
    |  _________^
261 | |
262 | |         #[pyo3(default)]
263 | |         field: String,
264 | |     },
    | |_____^

error: `default` is not permitted on tuple struct elements.
   --> tests/ui/invalid_frompy_derive.rs:268:37
    |
268 | struct NamedTuplesWithDefaultValues(#[pyo3(default)] String);
    |                                     ^

error: `rename_all` may only be specified once
   --> tests/ui/invalid_frompy_derive.rs:272:34
    |
272 | #[pyo3(rename_all = "camelCase", rename_all = "kebab-case")]
    |                                  ^^^^^^^^^^

error: `rename_all` is useless on tuple structs and variants.
   --> tests/ui/invalid_frompy_derive.rs:279:8
    |
279 | #[pyo3(rename_all = "camelCase")]
    |        ^^^^^^^^^^

error: `rename_all` is useless on tuple structs and variants.
   --> tests/ui/invalid_frompy_derive.rs:285:12
    |
285 |     #[pyo3(rename_all = "camelCase")]
    |            ^^^^^^^^^^

error: `rename_all` is not permitted on `transparent` structs and variants
   --> tests/ui/invalid_frompy_derive.rs:291:21
    |
291 | #[pyo3(transparent, rename_all = "camelCase")]
    |                     ^^^^^^^^^^

error: Useless variant `rename_all` - enum is already annotated with `rename_all
   --> tests/ui/invalid_frompy_derive.rs:300:12
    |
300 |     #[pyo3(rename_all = "camelCase")]
    |            ^^^^^^^^^^

error: aborting due to 43 previous errors
